Fix spacing in author and quote

--- a/styles.css
+++ b/styles.css
@@ -123,10 +123,11 @@ a {
 }
 
 .author {
+    margin-top: -30px;
     margin-bottom: 150px;
     align-self: flex-end;
     padding-right: 250px;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: bold;
 }
 
